--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -234,3 +234,308 @@
     --ion-card-background: #1e1e1e;
   }
 }
+
+// ********** START ON-COMPONENTS
+
+// FONT
+*{
+  // font-family: 'Source Sans Pro', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  // font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+$backColor: #161B22;
+$textColor: white;
+
+// REFRES ITEM
+ion-refresher {
+  // margin-top: 50px;
+  ion-spinner{
+    position: relative;
+    display: flex;
+    margin: 0;
+  }
+}
+
+// SPINNER
+ion-spinner {
+  display: block;
+  position: absolute;
+  margin: 0 auto;
+  margin-top: 90%;
+  margin-left: 45%;
+}
+
+//HEADER PRINCIPAÑ
+ion-header{
+  background: $backColor;
+  //header principa
+  ion-toolbar{
+    width: 100%;
+    --background: $backColor;
+    border: 0px !important;
+    border-bottom-color: transparent !important;
+    background-image: none !important;
+    border-bottom: none !important;
+
+    ion-title{
+      text-align: center;
+    }
+
+    div{
+      width: 20%;
+    }
+  }
+}
+
+//footer barra abajo
+ion-tab-bar{
+  background: $backColor;
+}
+
+//buscador
+ion-searchbar{
+  --box-shadow: none !important;
+  --border-radius: 50px !important;
+}
+
+ion-menu{
+  //contenido del menu lateral
+  ion-content{
+    background: $backColor !important;
+  }
+
+  //contenido dentro de cada lista del menu lateral
+  ion-item{
+    --background: #032541 !important;
+  }
+}
+
+ion-card{
+  width: 40%;
+  background: $backColor;
+  // --background: rgba(255,255,255,0.1);
+
+  //titulo de la card
+  ion-card-title{
+    font-size: 15px;
+    text-align: center;
+  }
+
+  //contenido de la card
+  ion-card-content{
+    font-size: 13px;
+    text-align: center;
+  }
+
+  img{
+    width: 100%;
+    // height: 10em;
+    border-radius: 50%;
+    // display:flex;
+    // flex-direction: row;
+    // justify-content: center;
+  }
+}
+
+//efecto riple para las redirecciones como los botones
+.ripple-parent {
+  position: relative;
+  overflow: hidden;
+}
+// ********** END ION-COMPONENTS
+
+
+// ********** START APP CONFIG
+//ERROR
+.error-serve{
+  width: 100%;
+  height: 500px;
+  display: block;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: center;
+}
+
+// CAPITAL LETTER
+.capital-letter{
+  text-transform: capitalize;
+}
+
+// PAGE COLOR
+.text-color{
+  color: $textColor;
+}
+
+.text-second-color{
+  color: $backColor;
+}
+
+// PAGE BACKGROUND COLOR
+.components-color{
+  background: $textColor;
+}
+
+.width-max{
+  width: 100%;
+}
+
+.width-90{
+  width: 90%;
+}
+
+.width-half{
+  width: 45%;
+}
+
+.font-small{
+  font-size: 9px !important;
+}
+
+.margin-top{
+  margin-top: 20px !important;
+}
+
+.margin-top-10{
+  margin-top: 10px !important;
+}
+
+.chip{
+  border-radius: 10px;
+  margin-top: 5px !important;
+  height: 20px !important;
+}
+
+.displays-between{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.displays-around{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.displays-center{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+// ********** END APP CONFIG
+.div-header-fixed{
+  width: 100%;
+  z-index: 1;
+  position: fixed;
+  background: $textColor;
+}
+
+//PAGE CONTAINER
+.header{
+  width: 100%;
+  margin-top: 55px;
+  min-height: 130px !important;
+  text-align: center;
+  border: 0px !important;
+  border-bottom-color: transparent !important;
+  background-image: none !important;
+  border-bottom: none !important;
+  --border-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background: $textColor;
+
+  h1, h2{
+    font-weight: bold;
+    font-size: 35px;
+    margin-top: 0px;
+    width: 74%;
+    margin: auto;
+  }
+
+  ion-back-button{
+    width: 10%;
+  }
+
+  form{
+    width: 90%;
+    margin: auto;
+  }
+}
+
+.form{
+  width: 90%;
+  margin: auto;
+  margin-top: 30px;
+}
+
+.div-container{
+  margin-top: 170px;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  // align-items: flex-start !important;
+  align-content:flex-start
+}
+
+.empty-header{
+  width: 100%;
+  margin-top: 70px;
+}
+
+.header-container-empty{
+  width: 10%;
+  height: 50px;
+}
+
+.container{
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  // align-items: flex-start !important;
+  align-content:flex-start
+}
+
+.fade-in-card {
+  animation: fadeIn 2s;
+  animation: fadeInUp 1s
+}
+
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@keyframes fadeInUp {
+  0% {transform:translateY(60px);}
+  100% {transform:translateY(0px);}
+}
+
+.span-bold{
+  font-weight: bold;
+}
+
+.div-center{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
