--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -312,29 +312,31 @@ ion-menu{
 }
 
 ion-card{
-  width: 40%;
+  // width: 40%;
+  width: 90%;
   background: $backColor;
   // --background: rgba(255,255,255,0.1);
 
   //titulo de la card
   ion-card-title{
-    font-size: 15px;
+    font-size: 25px;
     text-align: center;
   }
 
   //contenido de la card
   ion-card-content{
-    font-size: 13px;
+    font-size: 15px;
     text-align: center;
   }
 
   img{
     width: 100%;
-    // height: 10em;
     border-radius: 50%;
-    // display:flex;
-    // flex-direction: row;
-    // justify-content: center;
+  }
+
+  ion-button{
+    width: 70%;
+    height: 40px;
   }
 }
 
@@ -391,7 +393,7 @@ ion-card{
 }
 
 .font-small{
-  font-size: 9px !important;
+  font-size: 15px !important;
 }
 
 .margin-top{
@@ -405,7 +407,7 @@ ion-card{
 .chip{
   border-radius: 10px;
   margin-top: 5px !important;
-  height: 20px !important;
+  height: 25px !important;
 }
 
 .displays-between{
@@ -539,3 +541,5 @@ ion-card{
   justify-content: space-between;
   align-items: center;
 }
+
+
